# mrpdi

./: CMakeLists.txt
cli/: CMakeLists.txt  cli.cpp
core/: CMakeLists.txt  basedriver.cpp  basedriver.h  core.cpp  core.hpp  driver.h  input.cpp  input.hpp  utils.hpp
debian/: changelog  control  copyright  mrpdi-cli.install  mrpdi-drivers.install  mrpdi-gui.install
drivers/: CMakeLists.txt
drivers/common/: CMakeLists.txt  driverutils.cpp  driverutils.hpp
drivers/iqboard/: CMakeLists.txt  iqboard.cpp
drivers/multiclass/: CMakeLists.txt  multiclass.cpp
drivers/promethean/: CMakeLists.txt  promethean.cpp
drivers/tablet/: CMakeLists.txt  tablet.cpp
drivers/whiteboard/: CMakeLists.txt  whiteboard.cpp
gui/: CMakeLists.txt  main.cpp  mrpdi-gui.xml
lib/: CMakeLists.txt  basedriver.cpp  core.cpp  core.hpp  input.cpp  input.hpp  log.cpp  log.hpp  utils.cpp  utils.hpp
polkit/: lliurex.mrpdi.gui.pkla  lliurex.mrpdi.gui.policy
